--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Iris Holzer</h1>
-								<p>Ph.D. Candidate, Soils & Biogeochemistry <a href="https://html5up.net">HTML5 UP</a> and released<br />
-								for free under the <a href="https://html5up.net/license">Creative Commons</a> license.</p>
+								<p>Ph.D. Candidate in Soils & Biogeochemistry at UC Davis with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> <br />
+								studying rock weathering and carbon storage</p>
 							</div>
 						</div>
 						<nav>
@@ -343,7 +343,7 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 
 				<!-- Footer -->
 					<footer id="footer">
-						<p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+						<p class="copyright">&copy; Iris Holzer. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
 					</footer>
 
 			</div>
