--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Iris Holzer</h1>
-								<p>Ph.D. Candidate in Soils & Biogeochemistry at UC Davis with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> <br />
+								<p>Ph.D. Candidate in Soils & Biogeochemistry at UC Davis <br /> with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> <br />
 								studying rock weathering and carbon storage</p>
 							</div>
 						</div>
