--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 							<div class="inner">
 								<h1>Iris Holzer</h1>
 								<p>Ph.D. Candidate in Soils & Biogeochemistry at UC Davis <br /> with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> <br />
-								studying rock weathering and carbon storage</p>
+								studying rock weathering, the carbon cycle, and soils</p>
 							</div>
 						</div>
 						<nav>
