--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Iris Holzer</h1>
-								<p> Ph.D. Candidate (she/her) in Soils & Biogeochemistry at UC Davis <br /> with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> <br />
+								<p> Ph.D. Candidate (she/her) <br />in Soils & Biogeochemistry at UC Davis <br />
 								studying soil, rock weathering, and the carbon cycle</p>
 							</div>
 						</div>
@@ -55,7 +55,7 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>Adipiscing magna sed dolor elit. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
+								<p> I'm part of the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> at the University of California, Davis. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
 								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
 							</article>
 
