--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Iris Holzer</h1>
-								<p> Ph.D. Candidate (she/her) in Soils & Biogeochemistry at UC Davis <br />
+								<p> Ph.D. Candidate (she/her) at UC Davis in Soils & Biogeochemistry<br />
 								studying soil, rock weathering, and the carbon cycle</p>
 							</div>
 						</div>
@@ -55,8 +55,9 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/20211206_082645.jpeg" alt="" /></span>
-								<p> I'm part of the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a> at the University of California, Davis. Praesent eleifend dignissim arcu, at eleifend sapien imperdiet ac. Aliquam erat volutpat. Praesent urna nisi, fringila lorem et vehicula lacinia quam. Integer sollicitudin mauris nec lorem luctus ultrices.</p>
-								<p>Nullam et orci eu lorem consequat tincidunt vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus pharetra. Pellentesque condimentum sem. In efficitur ligula tate urna. Maecenas laoreet massa vel lacinia pellentesque lorem ipsum dolor. Nullam et orci eu lorem consequat tincidunt. Vivamus et sagittis libero. Mauris aliquet magna magna sed nunc rhoncus amet feugiat tempus.</p>
+								<p>As a Ph.D. candidate in Soils & Biogeochemistry, I study rock weathering as a potential tool for increasing carbon storage in agricultural and natural systems. Through my work with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I research enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I examine the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. </p>
+								<p>Beyond studying applications of mineral weathering, I also research weathering in natural systems. Using soil profiles atop nitrogen-bearing rocks, I examine the role of rock-derived nitrogen as a critical nutrient pool to terrestrial ecosystems, controlling aspects of ecosystem functioning and carbon storage at a global scale. In the forests of Northwestern California, I look at the release of these nitrogen pools across climates, furthering our understanding of how this essential nutrient becomes available to ecosystems, supporting forest growth and carbon uptake.</p>
+								<p>My diverse research background has prepared me for these projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in Canada <a href="https://doi.org/10.2110/palo.2019.026">here</a>.
 							</article>
 
 						<!-- Teaching -->
