--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			p {
-  			background-image: url("images/IMG_1533.heic");
+  			background-image: url('images/IMG_1533.heic');
 			}
 		</style>
 	</head>
