--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 		<style>
 			p {
-  			background-image: url('images/IMG_1533.heic');
+  			background-image: url('https://github.com/IrisHolzer/IrisHolzer.github.io/blob/e5535054f7991bed75e6acf3c0a78eaf4f9eb2c9/images/20220327_135903.jpeg');
 			}
 		</style>
 	</head>
