--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 				<!-- Header -->
 					<header id="header">
 						<div class="logo">
-							<span class="icon fa-mountain"></span>
+							<span class="<i class='fa-solid fa-mountain'></i>"></span>
 						</div>
 						<div class="content">
 							<div class="inner">
