--- a/index.html
+++ b/index.html
@@ -4,6 +4,18 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
+<?xml version="1.0" encoding="UTF-8"?>
+
+<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+
+   <url>
+
+      <loc>https://irisholzer.github.io/</loc>
+
+   </url>
+
+</urlset> 
+
 <html>
 	<head>
 		<title>Iris Holzer</title>
@@ -66,7 +78,7 @@
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
 								<p>Science exists for us all, whether we are artists or microbiologists, and effective science education requires relating topics to students’ existing interests. As a teacher, I love delving into advanced subject matter, but I am most excited by introducing students to unfamiliar disciplines, opening new spheres for building knowledge.<p/>
 								<p>At UC Davis and Pomona College, I have served as the teaching assistant for six classes, including upper division, discipline-specific courses and introductory-level courses for science and non-science majors. These courses include: Introduction to Geology; Earth History; Mineralogy; Soils in Our Environment; Soils, Water and Civilizations; and Soil Genesis, Morphology, and Classification.</p>
-								<p>Whether taking Soil Genesis students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I support student-centered learning using location-specific lessons and safe field introductions. Outside the classroom, I have advised three senior honors theses and mentored more than a dozen paid student interns, frequently in their first lab or field positions. In 2022, I was honored to receive the UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research in recognition of my efforts.</p>
+								<p>Whether taking Soil Genesis students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I support student-centered learning using location-specific lessons and safe field introductions. Outside the classroom, I have advised three senior honors theses and mentored more than a dozen paid student interns, frequently in their first lab or field positions. In 2022 I was honored to receive the <i>UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research</i>.</p>
 								<p>As a scientist and educator, I am committed to the ongoing work required to address systemic bias and racism in the earth sciences. Those of us in positions of power have a particular responsibility to identify and remove barriers to participation for our students, push for changes to institutional cultures, and teach in culturally responsive ways. This work is essential to support the next generation of climate scientists, activists, and policymakers.</p>
 							</article>
 
@@ -95,7 +107,6 @@
 								</form>
 								<ul class="icons">
 									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
-									<li><a href="#" class="icon brands fa-facebook-f"><span class="label">Facebook</span></a></li>
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 									<li><a href="https://github.com/IrisHolzer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
