--- a/index.html
+++ b/index.html
@@ -85,26 +85,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<form method="post" action="webform_contact.php">
-									<div class="fields">
-										<div class="field half">
-											<label for="name">Name</label>
-											<input type="text" name="name" id="name" />
-										</div>
-										<div class="field half">
-											<label for="email">Email</label>
-											<input type="text" name="email" id="email" />
-										</div>
-										<div class="field">
-											<label for="message">Message</label>
-											<textarea name="message" id="message" rows="4"></textarea>
-										</div>
-									</div>
-									<ul class="actions">
-										<li><input type="submit" value="Send Message" class="primary" /></li>
-										<li><input type="reset" value="Reset" /></li>
-									</ul>
-								</form>
+								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
+								<p><b>You can contact me at ioholzer 'at' ucdavis 'dot' edu.</b> Links to my Twitter, Google Scholar, and GitHub may be found below.</p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
