--- a/index.html
+++ b/index.html
@@ -85,8 +85,8 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
-								<p><b>You can contact me at ioholzer 'at' ucdavis 'dot' edu.</b> Links to my Twitter, Google Scholar, and GitHub may be found below.</p>
+								<span class="image main"><img src="images/IMG_1533.heic" alt="" /></span>
+								<p><b>You can contact me at ioholzer 'at' ucdavis 'dot' edu.</b></p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
