--- a/index.html
+++ b/index.html
@@ -4,17 +4,16 @@
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
 -->
-<?xml version="1.0" encoding="UTF-8"?>
 
-<urlset xmlns="http://www.sitemaps.org/schemas/sitemap/0.9">
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5E59NBET7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-   <url>
-
-      <loc>https://irisholzer.github.io/</loc>
-
-   </url>
-
-</urlset> 
+  gtag('config', 'G-L5E59NBET7');
+</script>
 
 <html>
 	<head>
