--- a/index.html
+++ b/index.html
@@ -43,10 +43,10 @@
 						</div>
 						<nav>
 							<ul>
-								<li><a href="#about">About</a></li>
-								<li><a href="#research">Research</a></li>
-								<li><a href="#teaching">Teaching</a></li>
-								<li><a href="#contact">Contact</a></li>
+								<li><a href="about">About</a></li>
+								<li><a href="research">Research</a></li>
+								<li><a href="teaching">Teaching</a></li>
+								<li><a href="contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
