--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/20220715_175541.jpeg" alt="" /></span>
-								<p>I am currently completing my Ph.D. in Soils & Biogeochemistry at UC Davis, where I study rock weathering in agricultural and natural systems. I became a soil scientist to explore interdisciplinary earth science questions on human-relevant timescales. In my research and teaching, I am passionate about increasing equitable access to field science and the outdoors.</p>
+								<p>I am currently completing my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis, where I study rock weathering in agricultural and natural systems. I became a soil scientist to explore interdisciplinary earth science questions on human-relevant timescales. In my research and teaching, I am passionate about increasing equitable access to field science and the outdoors.</p>
 								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the Pomona College Geology Department. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
 							</article>
 
