--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/20220715_175541.jpeg" alt="" /></span>
-								<p>I am currently completing my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis, where I study rock weathering in agricultural and natural systems. I became a soil scientist to explore interdisciplinary earth science questions on human-relevant timescales. In my research and teaching, I am passionate about increasing equitable access to field science and the outdoors.</p>
+								<p>I am currently completing my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis where I study rock weathering in agricultural and natural systems. I became a soil scientist to explore interdisciplinary earth science questions on human-relevant timescales. In my research and teaching, I am passionate about increasing equitable access to field science and the outdoors.</p>
 								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the Pomona College Geology Department. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
 							</article>
 
@@ -67,9 +67,9 @@
 							<article id="research">
 								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/20211206_082645.jpeg" alt="" /></span>
-								<p>As a Ph.D. candidate in with <a href="https://www.bzhoulton.com/">Ben Houlton</a>, I study rock weathering as a potential tool for increasing inorganic carbon storage. Through my research with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I examine enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I quantify the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. A recent review from our group is available <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.970429/full">here</a>.</p>
+								<p>As a Ph.D. candidate with <a href="https://www.bzhoulton.com/">Ben Houlton</a>, I study rock weathering as a potential tool for increasing inorganic carbon storage. Through my research with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I examine enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I assess the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. A recent review from our group is available <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.970429/full">here</a>.</p>
 								<p>Beyond studying applications of mineral weathering, I also research weathering in natural systems. Using soil profiles atop nitrogen-bearing rocks, I examine the role of rock-derived nitrogen as a critical nutrient pool to terrestrial ecosystems, controlling aspects of ecosystem functioning and carbon storage at a global scale. In the forests of Northwestern California, I look at the release of these nitrogen pools across climates, furthering our understanding of how this essential nutrient becomes available to ecosystems, supporting forest growth and carbon uptake.</p>
-								<p>My diverse research background has prepared me for projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in Canada in <a href="https://doi.org/10.2110/palo.2019.026">this publication</a> and find more links to my research on my <a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao">Google Scholar profile</a>.</p>
+								<p>My diverse research background has prepared me for projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in <a href="https://doi.org/10.2110/palo.2019.026">this publication</a> and find more links to my research on my <a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao">Google Scholar profile</a>.</p>
 							</article>
 
 						<!-- Teaching -->
@@ -77,12 +77,14 @@
 								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
 								<p>Science exists for us all, whether we are artists or microbiologists, and effective science education requires relating topics to students’ existing interests. As a teacher, I love delving into advanced subject matter, but I am most excited by introducing students to unfamiliar disciplines, opening new spheres for building knowledge.<p/>
-								<p>At UC Davis and Pomona College, I have served as the teaching assistant for six classes, including upper division, discipline-specific courses and introductory-level courses for science and non-science majors. These courses include: Introduction to Geology; Earth History; Mineralogy; Soils in Our Environment; Soils, Water and Civilizations; and Soil Genesis, Morphology, and Classification.</p>
-								<h4>Unordered</h4>
+								<p>At UC Davis and Pomona College, I have served as the teaching assistant for six classes, including upper division, discipline-specific courses and introductory-level courses for science and non-science majors. These courses include:</p>
 									<ul>
 										<li>Introduction to Geology</li>
-										<li>Sagittis adipiscing.</li>
-										<li>Felis enim feugiat.</li>
+										<li>Earth History</li>
+										<li>Mineralogy</li>
+										<li>Soils in Our Environment</li>
+										<li>Soils, Water and Civilizations</li>
+										<li>Soil Genesis, Morphology, and Classification</li>
 									</ul>
 								<p>Whether taking Soil Genesis students to describe their first soil pits mere steps from their dorms or teaching high schoolers about terrestrial carbon storage amidst giant sequoias, I support student-centered learning using location-specific lessons and safe field introductions. Outside the classroom, I have advised three senior honors theses and mentored more than a dozen paid student interns, frequently in their first lab or field positions. In 2022 I was honored to receive the <i>UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research</i>.</p>
 								<p>As a scientist and educator, I am committed to the ongoing work required to address systemic bias and racism in the earth sciences. Those of us in positions of power have a particular responsibility to identify and remove barriers to participation for our students, push for changes to institutional cultures, and teach in culturally responsive ways. This work is essential to support the next generation of climate scientists, activists, and policymakers.</p>
