--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Iris Holzer</h1>
+								<h1>Iris O. Holzer</h1>
 								<p> Ph.D. Candidate (she/her) at UC Davis in Soils & Biogeochemistry<br />
 								studying soil, rock weathering, and the carbon cycle</p>
 							</div>
