--- a/index.html
+++ b/index.html
@@ -8,13 +8,15 @@
 <html>
 	
 	<head>
-		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5E59NBET7"></script>
-		<script>
-  			window.dataLayer = window.dataLayer || [];
-  			function gtag(){dataLayer.push(arguments);}
-  			gtag('js', new Date());
+	<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L5E59NBET7"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  			gtag('config', 'G-L5E59NBET7');
+  gtag('config', 'G-L5E59NBET7');
+</script>
 		</script>
 		<title>Iris Holzer</title>
 		<meta charset="utf-8" />
