--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
 						</div>
 						<div class="content">
 							<div class="inner">
-								<h1>Iris O. Holzer</h1>
-								<p> Ph.D. Candidate (she/her) at UC Davis in Soils & Biogeochemistry<br />
-								studying soil, rock weathering, and the carbon cycle</p>
+								<h1>Soils of California</h1>
+								<p>Field-based soils teaching & research with<br />
+								Dr. Iris Holzer at UC Santa Barbara</p>
 							</div>
 						</div>
 						<nav>
