--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 						<nav>
 							<ul>
 								<li><a href="#about">About</a></li>
-								<li><a href="#research">Research</a></li>
 								<li><a href="#teaching">Teaching</a></li>
+								<li><a href="#research">Research</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -72,18 +72,18 @@
 								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the Pomona College Geology Department. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
 							</article>
 
-						<!-- Research -->
-							<article id="research">
-								<h2 class="major">Research</h2>
+						<!-- Teaching -->
+							<article id="teaching">
+								<h2 class="major">Teaching</h2>
 								<span class="image main"><img src="images/20211206_082645.jpeg" alt="" /></span>
 								<p>As a Ph.D. candidate with <a href="https://www.bzhoulton.com/">Ben Houlton</a>, I study rock weathering as a potential tool for increasing inorganic carbon storage. Through my research with the <a href="https://www.workinglandsinnovation.com/">Working Lands Innovation Center</a>, I examine enhanced silicate weathering, where crushed minerals, from rocks like basalt and olivine-bearing dunite, are added to soils and react with dissolved carbon dioxide. Using field trials across California and smaller mesocosm studies, I assess the carbon sequestration potential of enhanced rock weathering in soils and soil water and its impacts on crop and soil health. A recent review from our group is available <a href="https://www.frontiersin.org/articles/10.3389/fclim.2022.970429/full">here</a>.</p>
 								<p>Beyond studying applications of mineral weathering, I also research weathering in natural systems. Using soil profiles atop nitrogen-bearing rocks, I examine the role of rock-derived nitrogen as a critical nutrient pool to terrestrial ecosystems, controlling aspects of ecosystem functioning and carbon storage at a global scale. In the forests of Northwestern California, I look at the release of these nitrogen pools across climates, furthering our understanding of how this essential nutrient becomes available to ecosystems, supporting forest growth and carbon uptake.</p>
 								<p>My diverse research background has prepared me for projects at the nexus of geology, agriculture, hydrology, and soil science. I have studied soil formation in California deserts, groundwater geochemistry in New Zealand, the transport of micro-pollutants at the U.S. Geological Survey, and crop uptake of trace metals in North Carolina. You can read more about my work on the geochemistry of the Burgess Shale in <a href="https://doi.org/10.2110/palo.2019.026">this publication</a> and find more links to my research on my <a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao">Google Scholar profile</a>.</p>
 							</article>
 
-						<!-- Teaching -->
-							<article id="teaching">
-								<h2 class="major">Teaching</h2>
+						<!-- Research -->
+							<article id="research">
+								<h2 class="major">Research</h2>
 								<span class="image main"><img src="images/20220420_162902.jpeg" alt="" /></span>
 								<p>Science exists for us all, whether we are artists or microbiologists, and effective science education requires relating topics to students’ existing interests. As a teacher, I love delving into advanced subject matter, but I am most excited by introducing students to unfamiliar disciplines, opening new spheres for building knowledge.<p/>
 								<p>At UC Davis and Pomona College, I have served as the teaching assistant for six classes, including upper division, discipline-specific courses and introductory-level courses for science and non-science majors. These courses include:</p>
@@ -102,7 +102,7 @@
 						<!-- Contact -->
 							<article id="contact">
 								<h2 class="major">Contact</h2>
-								<p>You can contact me at <b>ioholzer 'at' ucdavis 'dot' edu</b>.</p>
+								<p>You can contact me at <b>irisholzer 'at' ucsb 'dot' edu</b>. I'm always excited to chat about scientific collaborations, courses, or ways to support our field programs.</p>
 								<ul class="icons">
 									<li><a href="https://twitter.com/iris_holzer" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
