--- a/index.html
+++ b/index.html
@@ -68,8 +68,9 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/20220715_175541.jpeg" alt="" /></span>
-								<p>I am currently completing my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis where I study rock weathering in agricultural and natural systems. I became a soil scientist to explore interdisciplinary earth science questions on human-relevant timescales. In my research and teaching, I am passionate about increasing equitable access to field science and the outdoors.</p>
-								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the Pomona College Geology Department. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
+								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry. I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023, and my research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems. One major area of emphasis in my work is the study of enhanced rock weathering for carbon removal.</p>
+								<p>In my teaching and research, I am committed to fostering equitable access to science and the outdoors, particularly via immersive field experiences that prioritize community building, safety, and place-based learning. I was recognized for this work with the UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research in 2022. Now at UCSB, I am working to lower barriers for student participation  in field-based opportunities, including by reducing or eliminating costs.</p>
+								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the <a href="https://www.pomona.edu/academics/departments/geology">Pomona College Geology Department</a>. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
 							</article>
 
 						<!-- Teaching -->
