--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
 						<!-- About -->
 							<article id="about">
 								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/20220715_175541.jpeg" alt="" /></span>
+								<span class="image main"><img src="images/Teaching_jalama_hibah_ganie_cropped.jpg" alt="" /></span>
+								<span>Photo credit: Hibah Ganie</span>
 								<p>My name is Iris Holzer (she/her), and I am an <a href="https://es.ucsb.edu/people/iris-holzer">Assistant Teaching Professor</a> in the Environmental Studies Program at UC Santa Barbara, where I specialize in soils and environmental chemistry. I completed my Ph.D. in <a href="https://soils.ucdavis.edu/">Soils & Biogeochemistry</a> at UC Davis in 2023, and my research focuses on rock weathering, soil formation, and carbon dynamics in the soils of agricultural and natural systems. One major area of emphasis in my work is the study of enhanced rock weathering for carbon removal.</p>
 								<p>In my teaching and research, I am committed to fostering equitable access to science and the outdoors, particularly via immersive field experiences that prioritize community building, safety, and place-based learning. I was recognized for this work with the UC Davis Chancellor’s Award for Excellence in Mentoring Undergraduate Research in 2022. Now at UCSB, I am working to lower barriers for student participation  in field-based opportunities, including by reducing or eliminating costs.</p>
 								<p>Prior to graduate school, I earned my B.A. in Geology from Scripps College via the <a href="https://www.pomona.edu/academics/departments/geology">Pomona College Geology Department</a>. Born in Mississippi and raised in Missouri, I have spent the last decade teaching and learning across California’s diverse landscapes.</p>
@@ -109,7 +110,7 @@
 									<li><a href="https://scholar.google.com/citations?user=ghtCnTUAAAAJ&hl=en&oi=ao" class="icon brands fa-google"><span class="label">Google Scholar</span></a></li>
 									<li><a href="https://github.com/IrisHolzer" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 								</ul>
-								<span class="image main"><img src="images/IMG_1533.jpg" alt="" /></span>
+								<span class=" main"><img src="s/IMG_1533.jpg" alt="" /></span>
 							</article>
 
 						<!-- Elements -->
